--- a/app-scr/src/app/pages/bitacora-actividad/bitacora-actividad.component.html
+++ b/app-scr/src/app/pages/bitacora-actividad/bitacora-actividad.component.html
@@ -17,38 +17,61 @@
                                 data-bs-target="#collapse-form" 
                                 [attr.aria-expanded]="bitacora.id_bitacora == null ? 'true' : 'false'"
                                 aria-controls="collapse-form">
-                                {{ bitacora.id_bitacora == null ? 'Registro de Actividad' : bitacora.sitio_proyecto }}
+                                @if(bitacora.id_bitacora == null) {
+                                    Registro de Actividad
+                                }@else {
+                                    <strong>{{ bitacora.folio_reporte }}</strong> &nbsp; {{ bitacora.bSitio ? bitacora.sitio : bitacora.proyecto }}
+                                }
                             </h5>
                         </div>
                         <form #miFormulario="ngForm" class="row needs-validation collapse {{ bitacora.id_bitacora == null ? 'show' : '' }}" 
                             id="collapse-form" aria-labelledby="headingOne" data-bs-parent="#accordion-form" 
                             novalidate (ngSubmit)="enviarFormularioBitacora()">
-                            <div class="field padding-bottom--24 col-md-4 col-sm-12">
-                                <label for="reporte" class="required">Reporte</label>
-                                <input type="text" name="reporte" id="reporte" [(ngModel)]="bitacora.folio_reporte" placeholder="MAI-092-1S" 
-                                    required #folio_reporteRef="ngModel" [class.is-invalid]="folio_reporteRef.invalid && folio_reporteRef.touched"
-                                    style="text-transform: uppercase;">
+                            <div class="field padding-bottom--24 col-md-3 col-sm-12">
+                                <label for="reporte">Reporte</label>
+                                <input type="text" name="reporte" id="reporte" [(ngModel)]="bitacora.folio_reporte" placeholder="000-00-00" 
+                                style="text-transform: uppercase;" class="form-control" disabled>
                                 <div class="invalid-feedback">*Campo obligatorio*</div>
                             </div>
-                            <div class="field padding-bottom--24 col-md-8">
-                                <label for="sitio_proyecto" class="required">Proyecto y/o Sitio</label>
-                                <input type="text" name="sitio_proyecto" placeholder="Ingresa el proyecto o sitio" [(ngModel)]="bitacora.sitio_proyecto"
-                                    required #sitio_proyectoRef="ngModel" [class.is-invalid]="sitio_proyectoRef.invalid && sitio_proyectoRef.touched">
-                                <div class="invalid-feedback">*Campo obligatorio*</div>
-                            </div>
-                            <div class="field padding-bottom--24 col-md-8 col-sm-12">
-                                <label for="cliente">Cliente</label>
-                                <input type="text" name="cliente" placeholder="Ingresa el cliente" [(ngModel)]="bitacora.cliente">
-                            </div>
                             <div class="field padding-bottom--24 col-md-4 col-sm-12">
+                                <label for="cliente" class="required">Cliente</label>
+                                <select [(ngModel)]="bitacora.cliente_id" class="form-select" (change)="recuperarFolio()" name="cliente_id">
+                                    <option value="0">SELECCIONA EL CLIENTE</option>
+                                    @for(cliente of catalogos.clientes; track $index) {
+                                        <option [value]="cliente.id_cliente">{{  cliente.cliente }}</option>
+                                    }                                 
+                                </select>
+                            </div>
+                            <div class="field padding-bottom--24 col-md-5 col-sm-12">
+                                <div class="d-flex justify-content-between pr-2">
+                                    <label for="sitio_proyecto" class="required">{{ bitacora.bSitio ? 'Sitio' : 'Proyecto'}}</label>
+                                    <fa-icon title="Cambiar" [icon]="['fas', 'rotate']" (click)="bitacora.bSitio = !bitacora.bSitio" style="cursor: pointer !important;color: var(--naranja-secundario);"></fa-icon>
+                                </div>
+                                <div class="sitio_proyecto">
+                                    @if(bitacora.bSitio) {
+                                        <select [(ngModel)]="bitacora.sitio_id" class="form-select" name="sitio_id" (change)="setSitio()">
+                                            <option value="0">SELECCIONA EL SITIO</option>
+                                            @for(sitio of catalogos.sitios; track $index) {
+                                                <option [value]="sitio.id_sitio">{{ sitio.sitio }}</option>
+                                            }
+                                        </select>
+                                    } @else {
+                                        <input type="text" class="form-control" name="proyecto" placeholder="Ingresa el proyecto o sitio" [(ngModel)]="bitacora.proyecto"
+                                        required #proyecto="ngModel" [class.is-invalid]="proyecto.invalid && proyecto.touched">
+                                    }
+                                </div>
+                                <div class="invalid-feedback">*Campo obligatorio*</div>
+                                
+                            </div>
+                            <div class="field padding-bottom--24 col-md-3 col-sm-12">
                                 <label for="fecha" class="required">Fecha</label>
-                                <input type="date" name="fecha" [(ngModel)]="bitacora.fecha" required
+                                <input type="date" class="form-control" name="fecha" [(ngModel)]="bitacora.fecha" required
                                     #fechaRef="ngModel" [class.is-invalid]="fechaRef.invalid && fechaRef.touched">
                                     <div class="invalid-feedback">*Campo obligatorio*</div>
                             </div>
-                            <div class="field padding-bottom--24 col-12">
+                            <div class="field padding-bottom--24 col-9">
                                 <label for="equipo">Equipo</label>
-                                <input type="text" name="equipo" placeholder="Ingresa el nombre del equipo" [(ngModel)]="bitacora.equipo">
+                                <input type="text" class="form-control" name="equipo" placeholder="Ingresa el nombre del equipo" [(ngModel)]="bitacora.equipo">
                             </div>
                             <div class="d-flex justify-content-end align-items-center mt-3 gap-2">
                                 <app-alerta
@@ -92,12 +115,12 @@
                                 (ngSubmit)="enviarFormularioActividad(actividad, $index)">
                                 <div class="field padding-bottom--24 col-md-6">
                                     <label for="orden_trabajo" class="required">Orden de trabajo (OT)</label>
-                                    <input type="text" name="orden_trabajo" placeholder="Ingresa el OT" [(ngModel)]="actividad.orden_trabajo">
+                                    <input type="text" class="form-control" name="orden_trabajo" placeholder="Ingresa el OT" [(ngModel)]="actividad.orden_trabajo">
                                     <div class="invalid-feedback">*Campo obligatorio*</div>
                                 </div>
                                 <div class="field padding-bottom--24 col-md-6">
                                     <label for="equipo" class="required">Equipo</label>
-                                    <input type="text" name="equipo" placeholder="Ingresa el Equipo" [(ngModel)]="actividad.equipo">
+                                    <input type="text" class="form-control" name="equipo" placeholder="Ingresa el Equipo" [(ngModel)]="actividad.equipo">
                                     <div class="invalid-feedback">*Campo obligatorio*</div>
                                 </div>
                                 <div class="field padding-bottom--24 col-md-8">
