--- a/app-scr/src/app/panel-admin/bitacora/bitacora.component.html
+++ b/app-scr/src/app/panel-admin/bitacora/bitacora.component.html
@@ -15,7 +15,7 @@
                     <p class="card-title-desc">En este módulo podrás visualizar, buscar & editar las Bitacoras de Actividades capturadas</p>
                 </div>
                 <div class="row mt-5">
-                    @for (item of $table; track item) {
+                    @for (item of $table; track $index) {
                         <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                             <div class="card card-aunt">
                                 <div class="card-block">
@@ -24,26 +24,68 @@
                                             <img class="img-fluid rounded-circle" style="width:65px;height: 65px;" src="/imagenes/img-grua.jpg" alt="dashboard-user">
                                         </div>
                                         <div class="card-title">
-                                            <h5 class="text-truncate">{{ item.reporte }}</h5>
-                                            <span class="text-truncate">CONSTRUCTORA ARTHUR</span>
-                                            <span class="date text-truncate">{{ item.fecha_creacion }}</span>
+                                            <h5 class="text-truncate">{{ item.folio_reporte }}</h5>
+                                            <span class="text-truncate">{{ item.bSitio ? item.sitio : item.proyecto }}</span>
+                                            <span class="date text-truncate">{{ item.fecha }}</span>
                                         </div>
                                     </div>
                                     <ul class="task-list">
-                                        @for (actividad of item.actividades; track actividad) {
-                                        <li>
-                                            <div class="task-title d-flex align-items-center justify-content-between">
-                                                <h6 class="my-0 text-truncate">{{ actividad.titulo }}</h6>
-                                                <span>9:30</span>
+                                        @if (item.detalles.length > 0) {
+                                            <li style="margin-bottom: 1px !important;">
+                                                <div class="task-title d-flex align-items-center justify-content-between">
+                                                    <h6 class="my-0 text-truncate">{{ item.detalles[0].orden_trabajo }}</h6>
+                                                    <span>{{ item.detalles[0].hora_creacion }}</span>
+                                                </div>
+                                                <i class="task-icon bg-c-green"></i>
+                                                <p class="text-muted text-truncate">{{ item.detalles[0].observacion }}</p>
+                                            </li>
+                                            <li class="btn_mostrar" 
+                                                data-bs-toggle="collapse" 
+                                                [attr.href]="'#collapseExample' + $index" 
+                                                role="button" 
+                                                aria-expanded="false" 
+                                                [attr.aria-controls]="'collapseExample' + $index">
+                                                Mostrar más
+                                            </li>
+                                            <div class="collapse" [id]="'collapseExample' + $index">
+                                                @for (actividad of item.detalles; track actividad) {
+                                                    <li style="margin-bottom: 1px !important;">
+                                                        <div class="task-title d-flex align-items-center justify-content-between">
+                                                            <h6 class="my-0 text-truncate">{{ actividad.orden_trabajo }}</h6>
+                                                            <span>{{ actividad.hora_creacion }}</span>
+                                                        </div>
+                                                        <i class="task-icon bg-c-green"></i>
+                                                        <p class="text-muted text-truncate">{{ actividad.observacion }}</p>
+                                                    </li>
+                                                }
                                             </div>
-                                            <i class="task-icon bg-c-green"></i>
-                                            <p class="text-muted text-truncate">{{ actividad.desc }}</p>
-                                        </li>
-                                        }
+                                        } @else {
+                                            <li style="margin-bottom: 1px !important;">
+                                                <div class="task-title d-flex align-items-center justify-content-between">
+                                                    <h6 class="my-0 text-truncate">Sin actividades</h6>
+                                                    <span>00:00</span>
+                                                </div>
+                                                <i class="task-icon bg-c-green"></i>
+                                                <p class="text-muted text-truncate">En proceso</p>
+                                            </li>
+                                            <li class="">&nbsp;</li>
+                                        }                                       
                                     </ul>
+                                    @if (item.detalles.length > 0) {
+                                        <small class="text-primary mt-3">Capturando...</small>
+                                        <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress-bar" style="width: 50%">50%</div>
+                                        </div>
+                                    } @else {
+                                        <small class="text-warning mt-3">Bitacora Iniciada</small>
+                                        <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress-bar bg-warning" style="width: 25%">25%</div>
+                                        </div>
+                                    }
+                                    
                                     <div class="widget-49-meeting-action d-flex justify-content-end">
-                                        <a href="#" class="btn btn-sm btn-flash-border-primary" (click)="getPDF(item.id)">EDITAR</a>
-                                        <a href="#" class="btn btn-sm btn-flash-border-primary" (click)="getPDF(item.id)">VISUALIZAR</a>
+                                        <a href="#" class="btn btn-sm btn-flash-border-primary" (click)="getPDF(item.id_bitacora)">EDITAR</a>
+                                        <a href="#" class="btn btn-sm btn-flash-border-primary" (click)="getPDF(item.id_bitacora)">VISUALIZAR</a>
                                     </div>
                                 </div>
                             </div>
