--- a/app-scr/src/app/panel-admin/bitacora/bitacora.component.html
+++ b/app-scr/src/app/panel-admin/bitacora/bitacora.component.html
@@ -39,24 +39,31 @@
                                                 <i class="task-icon bg-c-green"></i>
                                                 <p class="text-muted text-truncate">{{ item.detalles[0].observacion }}</p>
                                             </li>
-                                            <li class="btn_mostrar" 
-                                                data-bs-toggle="collapse" 
-                                                [attr.href]="'#collapseExample' + $index" 
-                                                role="button" 
-                                                aria-expanded="false" 
-                                                [attr.aria-controls]="'collapseExample' + $index">
-                                                Mostrar más
-                                            </li>
+                                            @if(item.detalles.length > 1) {
+                                                <li class="btn_mostrar" 
+                                                    data-bs-toggle="collapse" 
+                                                    [attr.href]="'#collapseExample' + $index" 
+                                                    role="button" 
+                                                    aria-expanded="false" 
+                                                    [attr.aria-controls]="'collapseExample' + $index"
+                                                    style="margin-bottom: 5px;">
+                                                    Mostrar más
+                                                </li>
+                                            } @else {
+                                                <li style="margin-bottom: 5px;">&nbsp;</li>
+                                            }
                                             <div class="collapse" [id]="'collapseExample' + $index">
-                                                @for (actividad of item.detalles; track actividad) {
-                                                    <li style="margin-bottom: 1px !important;">
-                                                        <div class="task-title d-flex align-items-center justify-content-between">
-                                                            <h6 class="my-0 text-truncate">{{ actividad.orden_trabajo }}</h6>
-                                                            <span>{{ actividad.hora_creacion }}</span>
-                                                        </div>
-                                                        <i class="task-icon bg-c-green"></i>
-                                                        <p class="text-muted text-truncate">{{ actividad.observacion }}</p>
-                                                    </li>
+                                                @for (actividad of item.detalles; track $index) {
+                                                    @if( $index > 0 ) {
+                                                        <li>
+                                                            <div class="task-title d-flex align-items-center justify-content-between">
+                                                                <h6 class="my-0 text-truncate">{{ actividad.orden_trabajo }}</h6>
+                                                                <span>{{ actividad.hora_creacion }}</span>
+                                                            </div>
+                                                            <i class="task-icon bg-c-green"></i>
+                                                            <p class="text-muted text-truncate">{{ actividad.observacion }}</p>
+                                                        </li>
+                                                    }                                                    
                                                 }
                                             </div>
                                         } @else {
@@ -71,21 +78,25 @@
                                             <li class="">&nbsp;</li>
                                         }                                       
                                     </ul>
-                                    @if (item.detalles.length > 0) {
-                                        <small class="text-primary mt-3">Capturando...</small>
+                                    @if (item.bFinalizado ) {
+                                        <strong class="text-success mt-3">Finalizado</strong>
                                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress-bar" style="width: 50%">50%</div>
+                                            <div class="progress-bar bg-success" style="width: 100%">100%</div>
+                                        </div>
+                                    } @else if (item.detalles.length > 0) {
+                                        <strong class="text-primary mt-3">Capturando...</strong>
+                                        <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress-bar" style="width: 66%">66%</div>
                                         </div>
                                     } @else {
-                                        <small class="text-warning mt-3">Bitacora Iniciada</small>
+                                        <strong class="text-warning mt-3">Bitacora Iniciada</strong>
                                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress-bar bg-warning" style="width: 25%">25%</div>
+                                            <div class="progress-bar bg-warning" style="width: 33%">33%</div>
                                         </div>
-                                    }
-                                    
-                                    <div class="widget-49-meeting-action d-flex justify-content-end">
-                                        <a href="#" class="btn btn-sm btn-flash-border-primary" (click)="getPDF(item.id_bitacora)">EDITAR</a>
-                                        <a href="#" class="btn btn-sm btn-flash-border-primary" (click)="getPDF(item.id_bitacora)">VISUALIZAR</a>
+                                    }                                    
+                                    <div class="widget-49-meeting-action d-flex justify-content-end mt-1">
+                                        <a class="btn btn-sm btn-flash-border-primary" (click)="editarBitacora(item.id_bitacora)">EDITAR</a>
+                                        <a class="btn btn-sm btn-flash-border-primary" (click)="getPDF(item.id_bitacora)">VISUALIZAR</a>
                                     </div>
                                 </div>
                             </div>
@@ -96,3 +107,4 @@
         </div>
     </div>
 </div>
+<app-loading-modal [isLoading]="isLoading"></app-loading-modal>
