--- a/app-scr/src/app/panel-admin/bitacora/bitacora.component.scss
+++ b/app-scr/src/app/panel-admin/bitacora/bitacora.component.scss
@@ -29,7 +29,7 @@
         }
     }
     li:last-child {
-        margin-bottom: 0;
+        margin-bottom: 5px;
     }
     .task-title {
         color: var(--gris) !important;
@@ -48,7 +48,7 @@
     content: "";
     position: absolute;
     background: #ecedef;
-    height: 100%;
+    height: 93%;
     width: 2px;
     top: 0px;
     left: 30px;
