--- a/app-scr/src/app/panel-admin/panel-admin.component.html
+++ b/app-scr/src/app/panel-admin/panel-admin.component.html
@@ -52,8 +52,8 @@
         <div class="px-xl-5 px-lg-4 px-sm-3 px-sm-1justify-content-center justify-content-md-between">
           <!-- Left links -->
           <ul class="navbar-nav flex-row">
-            <li class="navbar-item me-2 me-lg-0">
-              <a class="cp nav-link" (click)="toggleSidebar()">
+            <li class="navbar-item me-2 me-lg-0" style="margin-left: 30px;" (click)="toggleSidebar()">
+              <a class="cp nav-link" >
                 <i class="fa fa-bars" style="font-size: 20px;"></i>
               </a>
             </li>
